--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(checkmate,assertFileExists)
 importFrom(duckdb,duckdb)
 importFrom(fs,path)
 importFrom(glue,glue)
+importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
