--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: TestGenerator
 Type: Package
-Title: Integration tests for data analysis on the OMOP-CDM
-Version:  0.1.0
+Title: Integration tests for studies on the OMOP-CDM
+Version: 0.1.0
 Authors@R: c(
     person("Cesar", "Barboza", , "c.barboza@darwin-eu.org", role = c("cre", "aut"), comment = c(ORCID = "0009-0002-4453-3071")),
     person("Ger", "Inberg", , "g.inberg@darwin-eu.org", role = "aut", comment = c(ORCID = "0000-0001-8993-8748")),
     person("Adam", "Black", , "black@ohdsi.org", role = "aut", comment = c(ORCID = "0000-0001-5576-8701"))
   )
-Description: Pushes a sample population to a blank CDM with a full vocabulary for testing on the OMOP-CDM.
+Description: Push a sample population to a blank CDM with a full vocabulary for testing results of studies on the OMOP-CDM.
 License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
@@ -28,3 +28,5 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/darwin-eu-dev/TestGenerator
+BugReports: https://github.com/darwin-eu-dev/TestGenerator/issues
