--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: TestGenerator
 Type: Package
-Title: Integration Unit Tests for Studies on the OMOP-CDM
+Title: Integration Unit Tests for Pharmacoepidemiolological Studies
 Version: 0.2.3
 Authors@R: c(
     person("Cesar", "Barboza", , "c.barboza@darwin-eu.org", role = c("cre", "aut"), comment = c(ORCID = "0009-0002-4453-3071")),
     person("Ger", "Inberg", , "g.inberg@darwin-eu.org", role = "aut", comment = c(ORCID = "0000-0001-8993-8748")),
     person("Adam", "Black", , "black@ohdsi.org", role = "aut", comment = c(ORCID = "0000-0001-5576-8701"))
   )
-Description: Push a sample population to a blank CDM with a full vocabulary for testing results of studies on the OMOP-CDM.
+Description: Push a sample population for unit testing on data mapped to the Observational Medical Outcomes Partnership (OMOP) Common Data Model
 License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
