--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(fs,path)
 importFrom(glue,glue)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(omopgenerics,omopTables)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(usethis,proj_path)
