--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(patientsCDM)
 export(readPatients)
 import(dplyr)
+importFrom(CDMConnector,cdmFromCon)
+importFrom(CDMConnector,downloadEunomiaData)
+importFrom(CDMConnector,eunomia_dir)
+importFrom(CDMConnector,example_datasets)
 importFrom(DBI,dbAppendTable)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
@@ -15,7 +19,6 @@ importFrom(fs,path)
 importFrom(glue,glue)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
-importFrom(omopgenerics,omopTables)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(usethis,proj_path)
