--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(jsonlite,toJSON)
 importFrom(readr,read_csv)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(tibble,tibble)
 importFrom(tools,file_path_sans_ext)
 importFrom(usethis,proj_path)
 importFrom(usethis,use_directory)
