--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,9 @@ importFrom(checkmate,assert)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertDirectoryExists)
 importFrom(checkmate,assertFileExists)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_text)
 importFrom(duckdb,duckdb)
 importFrom(fs,path)
 importFrom(glue,glue)
