--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(patientsCDM)
 export(readPatients)
 export(readPatients.csv)
 export(readPatients.xl)
+import(cli)
 import(dplyr)
 import(ggplot2)
 importFrom(CDMConnector,cdmFromCon)
@@ -19,9 +20,6 @@ importFrom(checkmate,assert)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertDirectoryExists)
 importFrom(checkmate,assertFileExists)
-importFrom(cli,cli_alert_success)
-importFrom(cli,cli_alert_warning)
-importFrom(cli,cli_text)
 importFrom(duckdb,duckdb)
 importFrom(fs,path)
 importFrom(glue,glue)
@@ -30,6 +28,7 @@ importFrom(jsonlite,toJSON)
 importFrom(readr,read_csv)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(testthat,test_path)
 importFrom(tibble,tibble)
 importFrom(tools,file_path_sans_ext)
 importFrom(usethis,proj_path)
