extra argument in rd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(duckdb,duckdb)
 importFrom(glue,glue)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(omopgenerics,insertTable)
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,createWorkbook)
 importFrom(openxlsx,saveWorkbook)
