--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ import(dplyr)
 import(ggplot2)
 importFrom(CDMConnector,cdmFromCon)
 importFrom(CDMConnector,downloadEunomiaData)
-importFrom(CDMConnector,eunomia_dir)
+importFrom(CDMConnector,eunomiaDir)
 importFrom(CDMConnector,example_datasets)
 importFrom(DBI,dbAppendTable)
 importFrom(DBI,dbConnect)
