--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,13 @@ Type: Package
 Title: Integration Unit Tests for Pharmacoepidemiological Studies
 Version: 0.4.0
 Authors@R: c(
-    person("Cesar", "Barboza", , "c.barboza@darwin-eu.org", role = c("cre", "aut"), comment = c(ORCID = "0009-0002-4453-3071")),
+    person("Cesar", "Barboza", , "c.barboza@darwin-eu.org", role = c("aut"), comment = c(ORCID = "0009-0002-4453-3071")),
     person("Ioanna", "Nika", , "i.nika@darwin-eu.org", role = "aut"),
-    person("Ger", "Inberg", , "g.inberg@darwin-eu.org", role = "aut", comment = c(ORCID = "0000-0001-8993-8748")),
+    person("Ger", "Inberg", , "g.inberg@erasmusmc.nl", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8993-8748")),
     person("Adam", "Black", , "black@ohdsi.org", role = "aut", comment = c(ORCID = "0000-0001-5576-8701"))
   )
-Maintainer: Cesar Barboza <c.barboza@darwin-eu.org>
-Description: Push a sample population for unit testing on data mapped to the Observational Medical Outcomes Partnership (OMOP) Common Data Model.
+Maintainer: Ger Inberg <g.inberg@erasmusmc.nl>
+Description: An R interface to load testing data in the 'OMOP' Common Data Model ('CDM'). An input file, csv or xlsx, can be converted to a 'CDMConnector' object. This object can be used to execute and test studies that use the 'CDM' <https://www.ohdsi.org/data-standardization/>.
 License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
@@ -37,7 +37,9 @@ Imports:
     omopgenerics
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    curl,
+    httr
 Config/testthat/edition: 3
 URL: https://github.com/darwin-eu/TestGenerator, https://darwin-eu.github.io/TestGenerator/
 BugReports: https://github.com/darwin-eu/TestGenerator/issues
